--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.51.4",
     "react-toastify": "^10.0.5",
+    "reactjs-popup": "^2.0.6",
     "recharts": "^2.12.7",
     "yup": "^1.4.0"
   },
