--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "mysql2": "^3.9.7",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
+    "next-compose-plugins": "^2.2.1",
+    "next-pwa": "^5.6.0",
     "prop-types": "^15.8.1",
     "react": "^18",
     "react-circular-progressbar": "^2.1.0",
