--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-confirm-alert": "^3.0.6",
     "react-dom": "^18",
     "react-hook-form": "^7.51.4",
+    "react-modal": "^3.16.1",
     "react-toastify": "^10.0.5",
     "reactjs-popup": "^2.0.6",
     "recharts": "^2.12.7",
@@ -39,6 +40,7 @@
     "@types/node": "20.14.1",
     "@types/react": "18.3.3",
     "@types/react-dom": "^18",
+    "@types/react-modal": "^3.16.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "5.4.5"
